--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--1681491013\testng-customsuite.xml</span>
+                    <span>C:\Users\bhavy\AppData\Local\Temp\testng-eclipse-1215304393\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Irctc.automation.HomePage.HomePageTest" class="method navigator-link" hash-for-method="navigateToIrctcHomePage">navigateToIrctcHomePage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Irctc.automation.HomePage.HomePageTest" class="method navigator-link" hash-for-method="navigateToPnrStatus">navigateToPnrStatus</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -126,12 +126,35 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="navigateToIrctcHomePage">
-                  </a> <!-- navigateToIrctcHomePage -->
-                  <span class="method-name">navigateToIrctcHomePage</span>
-                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.findElement(org.openqa.selenium.By)&quot; because &quot;driver&quot; is null
-	at Irctc.automation.HomePage.HomePage.&lt;init&gt;(HomePage.java:24)
-	at Irctc.automation.HomePage.HomePageTest.navigateToIrctcHomePage(HomePageTest.java:22)
+                  <a name="navigateToPnrStatus">
+                  </a> <!-- navigateToPnrStatus -->
+                  <span class="method-name">navigateToPnrStatus</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;#sourceStation&quot;}
+  (Session info: chrome=131.0.6778.140)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.20.0&apos;, revision: &apos;866c76ca80&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [f8e1d3d8490bf06e43ba4dad3738aea3, findElement {using=id, value=sourceStation}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 131.0.6778.140, chrome: {chromedriverVersion: 131.0.6778.108 (3b014839fbc..., userDataDir: C:\Users\bhavy\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50329}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50329/devtoo..., se:cdpVersion: 131.0.6778.140, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: f8e1d3d8490bf06e43ba4dad3738aea3
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:349)
+	at Irctc.automation.Pnrstatus.PnrStatus.&lt;init&gt;(PnrStatus.java:35)
+	at Irctc.automation.HomePage.HomePage.pnrStatusButton(HomePage.java:48)
+	at Irctc.automation.HomePage.HomePageTest.navigateToPnrStatus(HomePageTest.java:57)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -167,7 +190,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--1681491013\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bhavy\AppData\Local\Temp\testng-eclipse-1215304393\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -178,7 +201,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;Irctc.automation.HomePage.HomePageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;navigateToIrctcHomePage&quot;/&gt;
+          &lt;include name=&quot;navigateToPnrStatus&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- Irctc.automation.HomePage.HomePageTest --&gt;
     &lt;/classes&gt;
@@ -222,14 +245,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'navigateToIrctcHomePage')
+data.setCell(0, 1, 'navigateToPnrStatus')
 data.setCell(0, 2, 'Irctc.automation.HomePage.HomePageTest')
-data.setCell(0, 3, 8277);
+data.setCell(0, 3, 35122);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,11 +273,11 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">Irctc.automation.HomePage.HomePageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">navigateToPnrStatus</span>
+                <span class="ignored-method-name">navigateToChartsAndVacancy</span>
+                <br/>
+                <span class="ignored-method-name">navigateToIrctcHomePage</span>
                 <br/>
                 <span class="ignored-method-name">navigateToFlightsPage</span>
-                <br/>
-                <span class="ignored-method-name">navigateToChartsAndVacancy</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -270,7 +293,7 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">navigateToIrctcHomePage</span>
+                <span class="method-name">navigateToPnrStatus</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
