--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--644153177\testng-customsuite.xml</span>
+                    <span>C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--1641416714\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Irctc.automation.HomePage.HomePageTest" class="method navigator-link" hash-for-method="loginButtonHomePage">loginButtonHomePage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Irctc.automation.HomePage.HomePageTest" class="method navigator-link" hash-for-method="registerButtonHomePage">registerButtonHomePage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginButtonHomePage">
-                  </a> <!-- loginButtonHomePage -->
-                  <span class="method-name">loginButtonHomePage</span>
+                  <a name="registerButtonHomePage">
+                  </a> <!-- registerButtonHomePage -->
+                  <span class="method-name">registerButtonHomePage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--644153177\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bhavy\AppData\Local\Temp\testng-eclipse--1641416714\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;Irctc.automation.HomePage.HomePageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;loginButtonHomePage&quot;/&gt;
+          &lt;include name=&quot;registerButtonHomePage&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- Irctc.automation.HomePage.HomePageTest --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginButtonHomePage')
+data.setCell(0, 1, 'registerButtonHomePage')
 data.setCell(0, 2, 'Irctc.automation.HomePage.HomePageTest')
-data.setCell(0, 3, 12084);
+data.setCell(0, 3, 14779);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,17 +213,19 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">Irctc.automation.HomePage.HomePageTest</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">navigateToPnrStatus</span>
+                <br/>
                 <span class="ignored-method-name">navigateToFlightsPage</span>
                 <br/>
-                <span class="ignored-method-name">navigateToChartsAndVacancy</span>
+                <span class="ignored-method-name">loginButtonHomePage</span>
                 <br/>
-                <span class="ignored-method-name">navigateToPnrStatus</span>
+                <span class="ignored-method-name">navigateToChartsAndVacancy</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -237,7 +239,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">Irctc.automation.HomePage.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginButtonHomePage</span>
+                <span class="method-name">registerButtonHomePage</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
